Day one completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-main.datasource.url=jdbc:hsqldb:file:.jmix/hsqldb/jmixpm
-main.datasource.username=sa
-main.datasource.password=
+main.datasource.url=jdbc:postgresql://localhost/jmixpm-dev
+main.datasource.username=root
+main.datasource.password=root
 
 main.liquibase.change-log=com/company/jmixpm/liquibase/changelog.xml
 
@@ -33,3 +33,7 @@ logging.level.io.jmix=info
 
 # 'debug' or 'trace' levels help to troubleshoot security problems
 logging.level.org.springframework.security=info
+
+main.liquibase.contexts=dev
+
+spring.cloud.vault.enabled=false
