--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 
-ui.login.defaultUsername= ${DEFAULT_USERNAME}
+ui.login.defaultUsername=
 ui.login.defaultPassword=
 
 # 'debug' level logs access control constraints
@@ -9,7 +9,7 @@ main.liquibase.contexts=prod, !dev
 
 spring.cloud.vault.enabled=true
 
-spring.cloud.vault.host=localhost
+spring.cloud.vault.host=${VAULT_HOST}
 spring.cloud.vault.port=8200
 spring.cloud.vault.token=${VAULT_TOKEN}
 spring.cloud.vault.scheme=http
