--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,23 @@ logging.level.org.springframework.security=info
 main.liquibase.contexts=dev
 
 spring.cloud.vault.enabled=false
+
+management.endpoint.health.show-details=always
+management.endpoint.health.enabled=true
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+
+spring.security.oauth2.authorizationserver.client.myclient.registration.client-id=ejmslanudf
+spring.security.oauth2.authorizationserver.client.myclient.registration.client-secret={noop}JdcMvZrRZg
+spring.security.oauth2.authorizationserver.client.myclient.registration.authorization-grant-types=client_credentials
+spring.security.oauth2.authorizationserver.client.myclient.registration.client-authentication_methods=client_secret_basic
+spring.security.oauth2.authorizationserver.client.myclient.token.access-token-format=reference
+spring.security.oauth2.authorizationserver.client.myclient.token.access-token-time-to-live=24h
+
+jmix.authserver.client.myclient.client-id=ejmslanudf
+jmix.authserver.client.myclient.resource-roles=rest-minimal
+
+jmix.resource-server.authenticated-url-patterns=/actuator/**
+jmix.resource-server.anonymous-url-patterns=
+
+spring.cache.jcache.provider = com.hazelcast.cache.HazelcastMemberCachingProvider
